Created the xray.EditPDB command